trunk/Test/generated/test/TestParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 /Users/ckbest83/Documents/workspace/Test/src/test/Test.g 2011-03-23 04:18:11

  package test;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TestParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FUNC_DECL_LIST", "STMT_LIST", "CALL_EXPR", "EXPR_LIST", "K_PROGRAM", "K_BEGIN", "K_END", "IDENTIFIER", "K_STRING", "ASSIGN", "SEMICOL", "STRINGLITERAL", "K_FLOAT", "K_INT", "K_VOID", "COMMA", "K_FUNCTION", "LP", "RP", "K_READ", "K_WRITE", "K_RETURN", "INTLITERAL", "FLOATLITERAL", "ADD", "SUB", "MULT", "DIV", "K_IF", "K_THEN", "K_ENDIF", "K_ELSE", "LT", "GT", "EQ", "K_FOR", "K_ENDFOR", "K_PROTO", "DIGIT", "COMMENT", "WS"
    };
    public static final int EOF=-1;
    public static final int FUNC_DECL_LIST=4;
    public static final int STMT_LIST=5;
    public static final int CALL_EXPR=6;
    public static final int EXPR_LIST=7;
    public static final int K_PROGRAM=8;
    public static final int K_BEGIN=9;
    public static final int K_END=10;
    public static final int IDENTIFIER=11;
    public static final int K_STRING=12;
    public static final int ASSIGN=13;
    public static final int SEMICOL=14;
    public static final int STRINGLITERAL=15;
    public static final int K_FLOAT=16;
    public static final int K_INT=17;
    public static final int K_VOID=18;
    public static final int COMMA=19;
    public static final int K_FUNCTION=20;
    public static final int LP=21;
    public static final int RP=22;
    public static final int K_READ=23;
    public static final int K_WRITE=24;
    public static final int K_RETURN=25;
    public static final int INTLITERAL=26;
    public static final int FLOATLITERAL=27;
    public static final int ADD=28;
    public static final int SUB=29;
    public static final int MULT=30;
    public static final int DIV=31;
    public static final int K_IF=32;
    public static final int K_THEN=33;
    public static final int K_ENDIF=34;
    public static final int K_ELSE=35;
    public static final int LT=36;
    public static final int GT=37;
    public static final int EQ=38;
    public static final int K_FOR=39;
    public static final int K_ENDFOR=40;
    public static final int K_PROTO=41;
    public static final int DIGIT=42;
    public static final int COMMENT=43;
    public static final int WS=44;

    // delegates
    // delegators


        public TestParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TestParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TestParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/ckbest83/Documents/workspace/Test/src/test/Test.g"; }


    	SymbolTable globalTab;
    	SymbolTable currentTab;


    public static class rule_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rule"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:37:1: rule[SymbolTable globalSymTab] : K_PROGRAM id K_BEGIN pgm_body K_END ;
    public final TestParser.rule_return rule(SymbolTable globalSymTab) throws RecognitionException {
        TestParser.rule_return retval = new TestParser.rule_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_PROGRAM1=null;
        Token K_BEGIN3=null;
        Token K_END5=null;
        TestParser.id_return id2 = null;

        TestParser.pgm_body_return pgm_body4 = null;


        CommonTree K_PROGRAM1_tree=null;
        CommonTree K_BEGIN3_tree=null;
        CommonTree K_END5_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:41:2: ( K_PROGRAM id K_BEGIN pgm_body K_END )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:42:2: K_PROGRAM id K_BEGIN pgm_body K_END
            {
            root_0 = (CommonTree)adaptor.nil();

            	
            	globalTab = globalSymTab;
            	currentTab = globalTab;
            	currentTab.scopeId = "global";
            //	System.out.println("Printing Global Symbol Table");
            	
            K_PROGRAM1=(Token)match(input,K_PROGRAM,FOLLOW_K_PROGRAM_in_rule113); 
            K_PROGRAM1_tree = (CommonTree)adaptor.create(K_PROGRAM1);
            root_0 = (CommonTree)adaptor.becomeRoot(K_PROGRAM1_tree, root_0);

            pushFollow(FOLLOW_id_in_rule116);
            id2=id();

            state._fsp--;

            K_BEGIN3=(Token)match(input,K_BEGIN,FOLLOW_K_BEGIN_in_rule119); 
            pushFollow(FOLLOW_pgm_body_in_rule122);
            pgm_body4=pgm_body();

            state._fsp--;

            adaptor.addChild(root_0, pgm_body4.getTree());
            K_END5=(Token)match(input,K_END,FOLLOW_K_END_in_rule124); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "rule"

    public static class id_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "id"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:50:1: id : IDENTIFIER ;
    public final TestParser.id_return id() throws RecognitionException {
        TestParser.id_return retval = new TestParser.id_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENTIFIER6=null;

        CommonTree IDENTIFIER6_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:51:2: ( IDENTIFIER )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:51:4: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id147); 
            IDENTIFIER6_tree = (CommonTree)adaptor.create(IDENTIFIER6);
            adaptor.addChild(root_0, IDENTIFIER6_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "id"

    public static class pgm_body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pgm_body"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:53:1: pgm_body : decl func_declarations ;
    public final TestParser.pgm_body_return pgm_body() throws RecognitionException {
        TestParser.pgm_body_return retval = new TestParser.pgm_body_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TestParser.decl_return decl7 = null;

        TestParser.func_declarations_return func_declarations8 = null;



        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:54:2: ( decl func_declarations )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:55:2: decl func_declarations
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_decl_in_pgm_body168);
            decl7=decl();

            state._fsp--;

            pushFollow(FOLLOW_func_declarations_in_pgm_body171);
            func_declarations8=func_declarations();

            state._fsp--;

            adaptor.addChild(root_0, func_declarations8.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "pgm_body"

    public static class decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:58:1: decl : ( decl_list )* ;
    public final TestParser.decl_return decl() throws RecognitionException {
        TestParser.decl_return retval = new TestParser.decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TestParser.decl_list_return decl_list9 = null;



        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:59:2: ( ( decl_list )* )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:59:4: ( decl_list )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:59:4: ( decl_list )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:59:4: decl_list
            	    {
            	    pushFollow(FOLLOW_decl_list_in_decl187);
            	    decl_list9=decl_list();

            	    state._fsp--;

            	    adaptor.addChild(root_0, decl_list9.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_list"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:61:1: decl_list : ( string_decl_list | var_decl_list );
    public final TestParser.decl_list_return decl_list() throws RecognitionException {
        TestParser.decl_list_return retval = new TestParser.decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TestParser.string_decl_list_return string_decl_list10 = null;

        TestParser.var_decl_list_return var_decl_list11 = null;



        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:62:2: ( string_decl_list | var_decl_list )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==K_STRING) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=K_FLOAT && LA2_0<=K_INT)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:62:4: string_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_string_decl_list_in_decl_list198);
                    string_decl_list10=string_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, string_decl_list10.getTree());

                    }
                    break;
                case 2 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:62:23: var_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_decl_list_in_decl_list202);
                    var_decl_list11=var_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, var_decl_list11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_list"

    public static class string_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl_list"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:66:1: string_decl_list : ( string_decl )+ ;
    public final TestParser.string_decl_list_return string_decl_list() throws RecognitionException {
        TestParser.string_decl_list_return retval = new TestParser.string_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TestParser.string_decl_return string_decl12 = null;



        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:67:2: ( ( string_decl )+ )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:67:4: ( string_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:67:4: ( string_decl )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:67:4: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list218);
            	    string_decl12=string_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, string_decl12.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl_list"

    public static class string_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:69:1: string_decl : K_STRING id ASSIGN str SEMICOL ;
    public final TestParser.string_decl_return string_decl() throws RecognitionException {
        TestParser.string_decl_return retval = new TestParser.string_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_STRING13=null;
        Token ASSIGN15=null;
        Token SEMICOL17=null;
        TestParser.id_return id14 = null;

        TestParser.str_return str16 = null;


        CommonTree K_STRING13_tree=null;
        CommonTree ASSIGN15_tree=null;
        CommonTree SEMICOL17_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:70:2: ( K_STRING id ASSIGN str SEMICOL )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:70:4: K_STRING id ASSIGN str SEMICOL
            {
            root_0 = (CommonTree)adaptor.nil();

            K_STRING13=(Token)match(input,K_STRING,FOLLOW_K_STRING_in_string_decl236); 
            pushFollow(FOLLOW_id_in_string_decl239);
            id14=id();

            state._fsp--;

            adaptor.addChild(root_0, id14.getTree());
            ASSIGN15=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_string_decl242); 
            ASSIGN15_tree = (CommonTree)adaptor.create(ASSIGN15);
            root_0 = (CommonTree)adaptor.becomeRoot(ASSIGN15_tree, root_0);

            pushFollow(FOLLOW_str_in_string_decl245);
            str16=str();

            state._fsp--;

            adaptor.addChild(root_0, str16.getTree());
            SEMICOL17=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_string_decl247); 

            	Symbol s = new Symbol((id14!=null?input.toString(id14.start,id14.stop):null), "STRING", (str16!=null?input.toString(str16.start,str16.stop):null));
            	currentTab.define(s);
            //	s.printStr();
            	

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl"

    public static class str_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "str"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:77:1: str : STRINGLITERAL ;
    public final TestParser.str_return str() throws RecognitionException {
        TestParser.str_return retval = new TestParser.str_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRINGLITERAL18=null;

        CommonTree STRINGLITERAL18_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:78:2: ( STRINGLITERAL )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:78:4: STRINGLITERAL
            {
            root_0 = (CommonTree)adaptor.nil();

            STRINGLITERAL18=(Token)match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_str276); 
            STRINGLITERAL18_tree = (CommonTree)adaptor.create(STRINGLITERAL18);
            adaptor.addChild(root_0, STRINGLITERAL18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "str"

    public static class var_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl_list"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:82:1: var_decl_list : ( var_decl )+ ;
    public final TestParser.var_decl_list_return var_decl_list() throws RecognitionException {
        TestParser.var_decl_list_return retval = new TestParser.var_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        TestParser.var_decl_return var_decl19 = null;



        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:83:2: ( ( var_decl )+ )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:83:4: ( var_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:83:4: ( var_decl )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:83:4: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list294);
            	    var_decl19=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl19.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl_list"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:85:1: var_decl : var_type var_id_list SEMICOL ;
    public final TestParser.var_decl_return var_decl() throws RecognitionException {
        TestParser.var_decl_return retval = new TestParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SEMICOL22=null;
        TestParser.var_type_return var_type20 = null;

        TestParser.var_id_list_return var_id_list21 = null;


        CommonTree SEMICOL22_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:86:2: ( var_type var_id_list SEMICOL )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:86:4: var_type var_id_list SEMICOL
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_var_type_in_var_decl316);
            var_type20=var_type();

            state._fsp--;

            adaptor.addChild(root_0, var_type20.getTree());
            pushFollow(FOLLOW_var_id_list_in_var_decl318);
            var_id_list21=var_id_list();

            state._fsp--;

            adaptor.addChild(root_0, var_id_list21.getTree());
            SEMICOL22=(Token)match(input,SEMICOL,FOLLOW_SEMICOL_in_var_decl320); 
            SEMICOL22_tree = (CommonTree)adaptor.create(SEMICOL22);
            adaptor.addChild(root_0, SEMICOL22_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class var_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_type"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:88:1: var_type : ( K_FLOAT | K_INT );
    public final TestParser.var_type_return var_type() throws RecognitionException {
        TestParser.var_type_return retval = new TestParser.var_type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_FLOAT23=null;
        Token K_INT24=null;

        CommonTree K_FLOAT23_tree=null;
        CommonTree K_INT24_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:89:2: ( K_FLOAT | K_INT )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==K_FLOAT) ) {
                alt5=1;
            }
            else if ( (LA5_0==K_INT) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:89:4: K_FLOAT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_FLOAT23=(Token)match(input,K_FLOAT,FOLLOW_K_FLOAT_in_var_type333); 
                    K_FLOAT23_tree = (CommonTree)adaptor.create(K_FLOAT23);
                    adaptor.addChild(root_0, K_FLOAT23_tree);

                    currentTab.currentVarType = "FLOAT";

                    }
                    break;
                case 2 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:90:4: K_INT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_INT24=(Token)match(input,K_INT,FOLLOW_K_INT_in_var_type340); 
                    K_INT24_tree = (CommonTree)adaptor.create(K_INT24);
                    adaptor.addChild(root_0, K_INT24_tree);

                    currentTab.currentVarType = "INT";

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_type"

    public static class any_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "any_type"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:92:1: any_type : ( var_type | K_VOID );
    public final TestParser.any_type_return any_type() throws RecognitionException {
        TestParser.any_type_return retval = new TestParser.any_type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_VOID26=null;
        TestParser.var_type_return var_type25 = null;


        CommonTree K_VOID26_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:93:2: ( var_type | K_VOID )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=K_FLOAT && LA6_0<=K_INT)) ) {
                alt6=1;
            }
            else if ( (LA6_0==K_VOID) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:93:4: var_type
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_type_in_any_type363);
                    var_type25=var_type();

                    state._fsp--;

                    adaptor.addChild(root_0, var_type25.getTree());

                    }
                    break;
                case 2 :
                    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:93:15: K_VOID
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_VOID26=(Token)match(input,K_VOID,FOLLOW_K_VOID_in_any_type367); 
                    K_VOID26_tree = (CommonTree)adaptor.create(K_VOID26);
                    adaptor.addChild(root_0, K_VOID26_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        	catch (RecognitionException e) {
        		throw e;
        	}
        finally {
        }
        return retval;
    }
    // $ANTLR end "any_type"

    public static class var_id_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_id_list"
    // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:95:1: var_id_list : var_id ( COMMA var_id )* ;
    public final TestParser.var_id_list_return var_id_list() throws RecognitionException {
        TestParser.var_id_list_return retval = new TestParser.var_id_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COMMA28=null;
        TestParser.var_id_return var_id27 = null;

        TestParser.var_id_return var_id29 = null;


        CommonTree COMMA28_tree=null;

        try {
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:96:2: ( var_id ( COMMA var_id )* )
            // /Users/ckbest83/Documents/workspace/Test/src/test/Test.g:96:4: var_id ( COMMA var_id )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_var_id_in_var_id_list378);
            var_id27=var_id();

            state._fsp--;
